--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <a href="news.html">
             <div class="gonext">
-                <img src="index/next.png" height="20px" width="auto">
+                <img src="img/next.png" height="20px" width="auto">
                 <span> 更 多 想 法</span>
             </div>
         </a>
